--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -36,5 +36,6 @@
         android:id="@+id/submitButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="invisible"
         android:text="Submit" />
 </LinearLayout>
